[gd_scene load_steps=14 format=3 uid="uid://b0sglxudbhfom"]

[ext_resource type="Script" path="res://1_scenes/7_maps/2_finishdoor/finish_door.gd" id="1_vgy78"]
[ext_resource type="Texture2D" uid="uid://dr5ka3fb3e7sk" path="res://assets/map layouts/door_animation_spritesheet.png" id="2_dhdwn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x2bq2"]
atlas = ExtResource("2_dhdwn")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0w3f"]
atlas = ExtResource("2_dhdwn")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qguc7"]
atlas = ExtResource("2_dhdwn")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qjnf"]
atlas = ExtResource("2_dhdwn")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sisym"]
atlas = ExtResource("2_dhdwn")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_obkps"]
atlas = ExtResource("2_dhdwn")
region = Rect2(160, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhv5b"]
atlas = ExtResource("2_dhdwn")
region = Rect2(192, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyuyx"]
atlas = ExtResource("2_dhdwn")
region = Rect2(224, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3nhr"]
atlas = ExtResource("2_dhdwn")
region = Rect2(256, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ynfqc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2bq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0w3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qguc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qjnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sisym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obkps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhv5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyuyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3nhr")
}],
"loop": false,
"name": &"open",
"speed": 25.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fv0w6"]
size = Vector2(32, 6)

[node name="FinishDoorContainer" type="Node2D"]
script = ExtResource("1_vgy78")

[node name="FinishDoor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="FinishDoorAnimation" type="AnimatedSprite2D" parent="FinishDoor"]
sprite_frames = SubResource("SpriteFrames_ynfqc")
animation = &"open"

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishDoor"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_fv0w6")

[node name="DoorBody" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorBody"]
shape = SubResource("RectangleShape2D_fv0w6")

[connection signal="body_entered" from="FinishDoor" to="." method="_on_body_entered"]
